# troubleshooting-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: section-comments.mdc
.github/workflows/: hugo-pages.yml
docs/: hugo.toml
docs/archetypes/: chapter.md
docs/assets/css/: main.css
docs/content/: _index.md
docs/layouts/_default/: baseof.html
docs/layouts/partials/: chapter-header.html  header.html  sidebar.html
part1_agent/: README.md  __init__.py  agent.py  prompt.py
part2_agent/: README.md  __init__.py  agent.py  prompt.py  skill_inject.py
part2_agent/skills/_template/: SKILL.md
part2_agent/skills/alert-triage/: SKILL.md
part2_agent/skills/error-rate/: SKILL.md
part2_agent/skills/investigation-report/: SKILL.md
part2_agent/skills/latency-spike/: SKILL.md
part3_agent/: IMPLEMENTATION_PLAN.md  README.md  __init__.py  agent.py  graph.py  prompt.py  skill_categorizer.py  skill_router.py  skill_tools.py
part3_agent/skills/get-alerts-or-incidents/: SKILL.md  reference.md
part3_agent/skills/get-alerts-or-incidents/scripts/: parse_alerts_response.py
part3_agent/skills/search-logs/: SKILL.md  indexes.example.md  indexes.md  reference.md
part3_agent/skills/troubleshoot/: SKILL.md  reference.md
part3_agent/skills/troubleshoot-apm-incidents/: SKILL.md
part3_agent/skills/troubleshoot-im-incidents/: SKILL.md  reference.md
part3_agent/skills/troubleshoot-report/: SKILL.md  reference.md
part3_agent/skills/troubleshoot-rum-incidents/: SKILL.md  reference.md
part3_agent/skills/troubleshoot-synthetics-incidents/: SKILL.md  reference.md
shared/: README.md
shared/workshop_shared/: __init__.py  agent_registry.py  cli.py  cli_helpers.py  config.py  tool_calls.py  workshop_context.py
shared/workshop_shared/llm/: azure.py  factory.py  invoke_health.py  ollama.py
shared/workshop_shared/mcp/: __init__.py  bridge.py  connect.py  gateway.py  session.py
shared/workshop_shared/observability/: __init__.py  galileo.py  investigation_log.py  logging_trace.py  otel.py  skill_span.py
shared/workshop_shared/slack/: __init__.py  alert_resolve.py  channels.py  doctor.py  listener.py  messages.py
shared/workshop_shared/tools/: base.py  builtin.py
shared/workshop_shared/tools/stubs/: slack.py  splunk_cloud_mcp.py  splunk_mcp.py  splunk_o11y.py
src/troubleshooting_agent/: __init__.py  cli.py  config.py
src/troubleshooting_agent/agent/: __init__.py  graph.py  runner.py  tool_calls.py
src/troubleshooting_agent/llm/: azure.py  factory.py  invoke_health.py  ollama.py
src/troubleshooting_agent/mcp/: __init__.py  bridge.py  gateway.py  session.py
src/troubleshooting_agent/observability/: galileo.py  logging_trace.py  otel.py
src/troubleshooting_agent/prompts/: __init__.py  system.py
src/troubleshooting_agent/slack/: channels.py  doctor.py  listener.py  messages.py
src/troubleshooting_agent/tools/: __init__.py  base.py
src/troubleshooting_agent/tools/stubs/: __init__.py  slack.py  splunk_cloud_mcp.py  splunk_mcp.py  splunk_o11y.py
tests/: conftest.py  test_agent_smoke.py  test_alert_resolve.py  test_azure_integration.py  test_config.py  test_galileo_session.py  test_galileo_skill_router.py  test_galileo_tokens.py  test_integration.py  test_investigation_log.py  test_llm_factory.py  test_logging_trace.py  test_mcp_bridge.py  test_mcp_gateway.py  test_ollama_factory.py  test_openai_integration.py  test_otel.py  test_skill_span.py  test_slack_listener.py  test_tool_calls.py  test_tools.py
tests/part1/: test_agent_smoke.py  test_extract_final_response.py  test_react_subgraph.py
tests/part2/: test_skill_inject.py  test_skills.py
tests/part3/: test_part3_graph.py  test_part3_observability.py  test_skill_categorizer.py  test_skill_router.py  test_skill_tools.py
tests/shared/: test_workshop_context.py
