[project]
name = "troubleshooting-agent"
version = "0.1.0"
description = "AI troubleshooting agent for applications and systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
troubleshoot-agent = "troubleshooting_agent.cli:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/troubleshooting_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["troubleshooting_agent"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["langchain.*", "langchain_core.*", "langchain_ollama.*", "langgraph.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Ollama instance",
    "mcp_integration: tests that require live MCP servers",
]
