[project]
name = "troubleshooting-agent"
version = "0.1.0"
description = "AI troubleshooting agent workshop — shared integrations + three agent parts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "httpx>=0.27",
    "mcp>=1.0",
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
    "pyyaml>=6.0",
]

[project.scripts]
troubleshooting-agent = "workshop_shared.cli:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
observability = [
    "splunk-opentelemetry>=2.11",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "galileo[openai]>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "shared/workshop_shared",
    "part1_agent",
    "part2_agent",
    "part3_agent",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["shared", "part1_agent", "part2_agent", "part3_agent", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["workshop_shared", "part1_agent", "part2_agent", "part3_agent"]
mypy_path = ["shared", "part1_agent", "part2_agent", "part3_agent"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["langchain.*", "langchain_core.*", "langchain_ollama.*", "langchain_openai.*", "langgraph.*", "mcp.*", "slack_bolt.*", "slack_sdk.*", "splunk_opentelemetry.*", "opentelemetry.*", "galileo.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Ollama instance",
    "azure_integration: tests that require Azure OpenAI credentials",
    "openai_integration: tests that require OpenAI-compatible API credentials",
    "mcp_integration: tests that require live MCP servers",
]
